2001-06-05  Peter Neelin <neelin@bic.mni.mcgill.ca>

	* peter_fix_for_jens_June2001: Tag added.

	* release-1_3_3: Tag added. This is bogus - no change from
	previous version.
	
	* callbacks/segmenting: When saving labels to a minc file in
	function save_label_data, copy header info from backup file rather
	than from original file since frequently that file is being
	overwritten and under some circumstances an error will occur.

2001-06-04  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Use 3-argument AC_DEFINE for HAVE_MALLINFO;
	otherwise autoheader gives error.

2001-05-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* release-1_3_2: Tag added.  The package built contains identical
	source code to that released as 1.3.1.

	* Include/connect.h:
	* Include/globals.h:
	* Include/graphics.h:
	* Include/graphics_dependent.h:
	* Include/graphics_types.h:
	* Include/marker_segment.h:
	* Include/surface_fitting.h: Removed files.

2001-05-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* release-1_3_1: Unpack the release 1.3.1 tarfile overtop the
	sources.  Release 1.3.1 was generated from David's 1.3 tarball;
	most of the changes were related to the build.  Unfortunately,
	the CVS repository that produced the distributed 1.3.1 release
	is slightly different, so no tag exists for this release.

	* Makefile:
	* Documentation/Makefile:
	* Hardware/Makefile:
	* segmenting_3d/Makefile:
	* slice_window/Makefile: Removed.

	* acinclude.m4: New file.  Concatenation of the two m4 files
	distributed from "smr_macros-0.2.4"
	[from www.cs.mcgill.ca/~stever/software].

	* AUTHORS:
	* COPYING:
	* INSTALL:
	* INSTALL.display:
	* Makefile.am:
	* NEWS:
	* README:
	* TODO:
	* configure.in:
	* atlas/Makefile.am:
	* callbacks/Makefile.am:
	* current_obj/Makefile.am:
	* cursor/Makefile.am:
	* cursor_contours/Makefile.am:
	* edit_surface/Makefile.am:
	* events/Makefile.am:
	* images/Makefile.am:
	* immediate_mode/Makefile.am:
	* input_files/Makefile.am: