@@ -1,3 +1,11 @@
+2001-07-09  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* acinclude.m4 (AC_HELP_STRING): Disable the too-clever
+        pretty formatter.
+
+	* Makefile.am (Display_LDADD): Put X_LIBS (which holds the -L
+	options) ahead of -l options.
+
 2001-06-05  Peter Neelin <neelin@bic.mni.mcgill.ca>
 
 	* peter_fix_for_jens_June2001: Tag added.
